Minor fix to signup text spacing

--- a/src/styles/_components/_forms.scss
+++ b/src/styles/_components/_forms.scss
@@ -99,7 +99,8 @@
         width: 100%;
         max-width: 264px;
         padding-bottom: 24px;
-        margin-bottom: 24px;
+        margin-top: 18px;
+        margin-bottom: 18px;
         font-size: em(14px);
         color: color('feedback', 'text');
         text-align: left;
